# django-ml-api

./: Procfile  db.sqlite3  environment.yml  pyproject.toml  requirements.py  requirements.txt
OMS/: admin.py  apps.py  models.py
OMS/migrations/: 0001_initial.py
citizenScience/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
citizenScience/migrations/: 0001_initial.py  0002_extendedsocialaccount.py  0003_alter_extendedsocialaccount_social_account.py  0004_delete_extendedsocialaccount.py
config/: db.sqlite3  settings.py  urls.py
env/: new.env  pyvenv.cfg
staticfiles/: staticfiles.json
staticfiles/drf-yasg/: README.br  immutable.js.br  insQ.d4a1933caf20.js.br  redoc-init.41348b1afc50.js.br
staticfiles/drf-yasg/redoc/: redoc.standalone.js.map.br
staticfiles/drf-yasg/redoc-old/: LICENSE.e4e5f59c85dc.br  redoc.min.js.8b046eaab501.map.br
staticfiles/drf-yasg/swagger-ui-dist/: NOTICE.342625133694.br  swagger-ui-bundle.js.map.br  swagger-ui-es-bundle.js.br  swagger-ui-es-bundle.js.map.br  swagger-ui-standalone-preset.0d28ec29d05c.js.br  swagger-ui.4c628c77b145.css.br  swagger-ui.css.7039838317ab.map.br  (+1 more)
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_created_date_and_more.py  0003_alter_user_managers_remove_user_created_date_and_more.py  0004_alter_user_username.py  0005_user_is_student_user_is_teacher.py  0006_auto_20221021_0519.py  0007_alter_user_managers_user_created_at_user_updated_at_and_more.py
